RESOLVED FIXED306805
Unreviewed, fix WebCore regression part 2
https://bugs.webkit.org/show_bug.cgi?id=306805
Summary Unreviewed, fix WebCore regression part 2
Yusuke Suzuki
Reported 2026-02-02 14:31:12 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-02 14:31:20 PST
Yusuke Suzuki
Comment 2 2026-02-02 14:32:02 PST
EWS
Comment 3 2026-02-02 14:34:08 PST
Committed 306656@main (f0783d99f8c2): <https://commits.webkit.org/306656@main> Reviewed commits have been landed. Closing PR #57726 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.