Unreviewed, fix WebCore regression part 2 https://bugs.webkit.org/show_bug.cgi?id=306805 rdar://169478608

* Source/JavaScriptCore/runtime/IteratorOperations.cpp:
(JSC::getAsyncIteratorImpl):

Canonical link: https://commits.webkit.org/306656@main